--- a/Darkest Dungeon Take2/Darkest Dungeon Take2.csproj
+++ b/Darkest Dungeon Take2/Darkest Dungeon Take2.csproj
@@ -282,21 +282,22 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\Character.cs" />
-    <Compile Include="Assets\Scripts\Dice.cs" />
-    <Compile Include="Assets\Scripts\EnemyCharacter.cs" />
-    <Compile Include="Assets\Scripts\EnemyManager.cs" />
+    <Compile Include="Assets\Scripts\Characters\Character.cs" />
+    <Compile Include="Assets\Scripts\Characters\EnemyCharacter.cs" />
+    <Compile Include="Assets\Scripts\Characters\EnemyManager.cs" />
+    <Compile Include="Assets\Scripts\Characters\PlayerManager.cs" />
     <Compile Include="Assets\Scripts\FightManager.cs" />
     <Compile Include="Assets\Scripts\Items\CarriedItem.cs" />
     <Compile Include="Assets\Scripts\Items\Item.cs" />
     <Compile Include="Assets\Scripts\Items\Items.cs" />
-    <Compile Include="Assets\Scripts\PlayerManager.cs" />
     <Compile Include="Assets\Scripts\Races\Assassine.cs" />
     <Compile Include="Assets\Scripts\Races\DamageDealer.cs" />
+    <Compile Include="Assets\Scripts\Races\Dice.cs" />
     <Compile Include="Assets\Scripts\Races\Healer.cs" />
     <Compile Include="Assets\Scripts\Races\Races.cs" />
     <Compile Include="Assets\Scripts\Races\Support.cs" />
     <Compile Include="Assets\Scripts\Races\Tank.cs" />
+    <Compile Include="Assets\Scripts\SaveLoad\SaveLoadManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Artwork\Sprites\Sources.txt" />
